Change label for total_amount_of_ineligible_expenditure o financial findings

--- a/src/etools/applications/audit/templates/audit/face_spotcheck_pdf.html
+++ b/src/etools/applications/audit/templates/audit/face_spotcheck_pdf.html
@@ -24,7 +24,7 @@
           <td colspan="2">{{ engagement.total_amount_tested|default:"0.00"|currency }}</td>
         </tr>
         <tr>
-          <td colspan="2">Total Amount of Ineligible Expenditure</td>
+          <td colspan="2">Financial Findings</td>
           <td colspan="2">{{ engagement.total_amount_of_ineligible_expenditure_local|default:"0.00"|currency }}</td>
           <td colspan="2">{{ engagement.total_amount_of_ineligible_expenditure|default:"0.00"|currency }}</td>
         </tr>
@@ -174,7 +174,7 @@
           <td colspan="2">{{ engagement.total_amount_tested|default:"0.00"|currency }}</td>
         </tr>
         <tr>
-          <td colspan="2">Total Amount of Ineligible Expenditure</td>
+          <td colspan="2">Financial Findings</td>
           <td colspan="2">{{ engagement.total_amount_of_ineligible_expenditure_local|default:"0.00"|currency }}</td>
           <td colspan="2">{{ engagement.total_amount_of_ineligible_expenditure|default:"0.00"|currency }}</td>
         </tr>
