[265564] Add New AAP Field in Strategy Tab of ePD

--- a/src/etools/applications/partners/templates/pd/detail.html
+++ b/src/etools/applications/partners/templates/pd/detail.html
@@ -217,6 +217,9 @@
           <td class=""><span class="bold">{% translate "Capacity Development" %}:</span> {{ pd.capacity_development|escape|linebreaks }}</td>
         </tr>
         <tr>
+          <td class=""><span class="bold">{% translate "Accountability to Affected Populations (AAP)" %}:</span> {{ pd.accountability_to_affected_populations|escape|linebreaks }}</td>
+        </tr>
+        <tr>
           <td class=""><span class="bold">{% translate "Other Partners involved" %}:</span> {{ pd.other_partners_involved|escape|linebreaks }}</td>
         </tr>
         <tr>
