[282852] FMM | Include Mission Completion Date in PDF/Excel Mission Reports (Ref: SG INC0573461)

--- a/src/etools/applications/field_monitoring/planning/templates/fm/visit_pdf.html
+++ b/src/etools/applications/field_monitoring/planning/templates/fm/visit_pdf.html
@@ -119,6 +119,17 @@
                             </div>
                         </td>
                     </tr>
+                    {% if mission_completion_date %}
+                    <tr>
+                        <td>
+                            <div>
+                                <span class="label">Mission completion date:</span>
+                                <span class="value">{{ mission_completion_date|date:"d-M-y" }}</span>
+                            </div>
+                        </td>
+                        <td></td>
+                    </tr>
+                    {% endif %}
                 </table>
                 <br/>
                 <div>
