--- a/src/etools/applications/partners/templates/pd/detail.html
+++ b/src/etools/applications/partners/templates/pd/detail.html
@@ -287,7 +287,7 @@
             {% for pd_output in result_link.ll_results.all %}
             <tr>
             <td class="w-p30">{{ pd_output.name }}</td>
-              {% for indicator in pd_output.applied_indicators.all %}
+              {% for indicator in pd_output.applied_indicators.all|active_only %}
                     {%  if not forloop.first %}
                         <td><span> </span></td>
                     {% endif %}
@@ -295,27 +295,23 @@
                         {% if indicator.indicator.unit == "number" %}
                             {% with variable="#" %}
                                 <td class="w-p30">
-                                    {% if not indicator.is_active %} ({% translate 'Inactive' %}){% endif %}
                                     {{ variable }} {{ indicator.indicator.title }}
                                 </td>
                             {% endwith %}
                         {% elif indicator.indicator.unit == "percentage" and indicator.indicator.display_type == "percentage" %}
                             {% with variable="%" %}
                                 <td class="w-p30">
-                                    {% if not indicator.is_active %} ({% translate 'Inactive' %}){% endif %}
                                     {{ variable }} {{ indicator.indicator.title }}
                                 </td>
                             {% endwith %}
                         {% elif indicator.indicator.unit == "percentage" and indicator.indicator.display_type == "ratio" %}
                             {% with variable="÷" %}
                                 <td class="w-p30">
-                                    {% if not indicator.is_active %} ({% translate 'Inactive' %}){% endif %}
                                     {{ variable }} {{ indicator.indicator.title }}
                                 </td>
                             {% endwith %}
                         {% else %}
                             <td class="w-p30">
-                                {% if not indicator.is_active %} ({% translate 'Inactive' %}){% endif %}
                                 {{ indicator.indicator.title }}
                             </td>
                         {% endif %}
